--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "vendor/spdlog"]
 	path = vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Granola/vendor/GLFW"]
+	path = Granola/vendor/GLFW
+	url = https://github.com/glfw/glfw
+[submodule "Granola/vendor/spdlog"]
+	path = Granola/vendor/spdlog
+	url = https://github.com/gabime/spdlog
