added GLFW, created simple window

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
 #Directories
-.vs/
 bin/
 bin-int/
-#vendor/
-#Granola/vendor/
+
 #Files
 *.user
+
+# Visual Studio clutter
+_ReSharper*
+*.sdf
+*.suo
+*.dir
+*.vcxproj*
+*.sln
+.vs
+CMakeSettings.json
+Win32
+x64
+Debug
+Release
+MinSizeRel
+RelWithDebInfo
+*.opensdf
