--- a/Granola/Granola.vcxproj.filters
+++ b/Granola/Granola.vcxproj.filters
@@ -10,8 +10,14 @@
     <Filter Include="src\Granola\Events">
       <UniqueIdentifier>{A483F440-9067-B596-F9C7-AFE9E5CA9F18}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Granola\ImGui">
+      <UniqueIdentifier>{EA542BC4-566B-295A-9FE2-B47B0B38FAE1}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\Platform">
       <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Platform\OpenGL">
+      <UniqueIdentifier>{35A49437-A105-7245-2A73-B8F796D3A804}</UniqueIdentifier>
     </Filter>
     <Filter Include="src\Platform\Windows">
       <UniqueIdentifier>{5B054582-4794-CE4B-F0B2-E246DC20DFF1}</UniqueIdentifier>
@@ -42,6 +48,9 @@
     <ClInclude Include="src\Granola\Events\MouseEvent.h">
       <Filter>src\Granola\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\Granola\ImGui\ImGuiLayer.h">
+      <Filter>src\Granola\ImGui</Filter>
+    </ClInclude>
     <ClInclude Include="src\Granola\Layer.h">
       <Filter>src\Granola</Filter>
     </ClInclude>
@@ -54,20 +63,22 @@
     <ClInclude Include="src\Granola\Window.h">
       <Filter>src\Granola</Filter>
     </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
       <Filter>src\Platform\Windows</Filter>
     </ClInclude>
     <ClInclude Include="src\grlpch.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\Granola\ImGui\ImGuiLayer.h" />
-    <ClInclude Include="vendor\imgui\backends\imgui_impl_opengl3.h" />
-    <ClInclude Include="src\Platform\OpenGL\imgui_impl_opengl3.h" />
-    <ClInclude Include="src\Platform\OpenGL\imgui_impl_opengl3_loader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Granola\App.cpp">
       <Filter>src\Granola</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Granola\ImGui\ImGuiLayer.cpp">
+      <Filter>src\Granola\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="src\Granola\Layer.cpp">
       <Filter>src\Granola</Filter>
@@ -78,15 +89,18 @@
     <ClCompile Include="src\Granola\Log.cpp">
       <Filter>src\Granola</Filter>
     </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\dummy.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
       <Filter>src\Platform\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\grlpch.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\Granola\ImGui\ImGuiLayer.cpp" />
-    <ClCompile Include="vendor\imgui\backends\imgui_impl_opengl3.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\imgui_impl_opengl3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
