--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "Granola/vendor/imgui"]
 	path = Granola/vendor/imgui
 	url = https://github.com/ocornut/imgui
+[submodule "Granola/vendor/glm"]
+	path = Granola/vendor/glm
+	url = https://github.com/g-truc/glm
